--- a/Fundamentals_of_Python.ipynb
+++ b/Fundamentals_of_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMjjNx8D1zui1UYqr82xaPz",
+      "authorship_tag": "ABX9TyOpA9nvKP36LU+ubpe9jVQM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,24 +30,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Fundamentals of Python"
+        "## **Fundamentals of Python**"
       ],
       "metadata": {
         "id": "NZIfjdbLRVL8"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Indention"
+      ],
+      "metadata": {
+        "id": "K1PUjGbh38sP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "if 5>2:\n",
-        "  print(\"two is less than five\")"
+        "if 5 > 2:\n",
+        "  print(\"Five is greater than two!\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "1usfiEkeP74r",
-        "outputId": "887c65ad-4dc3-4311-8f5a-1b0648f51887"
+        "id": "6XqAsIVE4Axv",
+        "outputId": "8a5dd935-760b-45d9-d4ed-fb2d5f55c57b"
       },
       "execution_count": 1,
       "outputs": [
@@ -55,47 +64,32 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "two is less than five\n"
+            "Five is greater than two!\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "print(\"Hello World!\")\n",
-        "#Green comment not shown in the running program."
+        "Comments"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ncnmM4sdTU7s",
-        "outputId": "631b23e9-430a-4db5-bbcf-bf851e7deba4"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello World!\n"
-          ]
-        }
-      ]
+        "id": "mGFwN5bb4KxZ"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "array=[1,2,3]\n",
-        "print(array)"
+        "#This is a comment\n",
+        "print(\"Hello, world\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "LXHDMn1zTx8U",
-        "outputId": "af4d712e-066e-4804-ec8f-21009404385f"
+        "id": "-jvEYE5d4MdW",
+        "outputId": "da9ff4e3-f16c-43e2-abc2-af1514c3a166"
       },
       "execution_count": 3,
       "outputs": [
@@ -103,24 +97,58 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 2, 3]\n"
+            "Hello, world\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Variable"
+      ],
+      "metadata": {
+        "id": "vfZgbRh24UBB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "a=b=c=\"Huehuehue\"\n",
-        "print(a)\n",
+        "x = 1\n",
+        "a, b, c = 0, -1, 2\n",
+        "b = \"Sally\" #This is a type of string\n"
+      ],
+      "metadata": {
+        "id": "dkm2WhI04Ze5"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Casting"
+      ],
+      "metadata": {
+        "id": "AX6gKquV4nrh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = \"sally\" #This is a type of string\n",
+        "b = int(4)\n",
+        "print(b)\n",
+        "\n",
+        "b = float(4)\n",
         "print(b)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "v0QK8REEUWre",
-        "outputId": "5ac9219d-b20f-41a7-b1f2-ea0a75d9808b"
+        "id": "68KjS6Fd5E6_",
+        "outputId": "a9559ace-6b15-4664-ba95-ee1d589fd426"
       },
       "execution_count": 5,
       "outputs": [
@@ -128,29 +156,35 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Huehuehue\n",
-            "Huehuehue\n"
+            "4\n",
+            "4.0\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Type() function"
+      ],
+      "metadata": {
+        "id": "ZTdNPGtl5Mbg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "stringVar=\"string\"\n",
-        "floatVar=(8.3)\n",
-        "intVar=2\n",
-        "\n",
-        "print(type(stringVar))\n",
-        "print(type(floatVar))\n",
-        "print(type(intVar))"
+        "x = 5\n",
+        "y = \"John\"\n",
+        "print(type(x))\n",
+        "print(type(y))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "retKucDzU7pd",
-        "outputId": "dcbd64da-c1a5-4a98-cf05-082842f5f67a"
+        "id": "PQnISy5z5PQq",
+        "outputId": "2af0beaa-186d-47e0-f1b9-bffb844b5473"
       },
       "execution_count": 6,
       "outputs": [
@@ -158,10 +192,285 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'str'>\n",
-            "<class 'float'>\n",
-            "<class 'int'>\n"
+            "<class 'int'>\n",
+            "<class 'str'>\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Quotes"
+      ],
+      "metadata": {
+        "id": "MeLs_54f5Va0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = \"John\"\n",
+        "y = 'John'"
+      ],
+      "metadata": {
+        "id": "EnUVn4WC5ZDh"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Multiple Variables"
+      ],
+      "metadata": {
+        "id": "8XJVgQgw5cka"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x, y, z = \"one\", \"two\", \"three\"\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7-YY2PSA5huY",
+        "outputId": "156e96be-c1b6-4a2b-ebb4-33b809abdcbe"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "one\n",
+            "two\n",
+            "three\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "One Value, Multiple Variables"
+      ],
+      "metadata": {
+        "id": "IA02lyAl5tLk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = y = z = \"four\"\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dc-e0EJB5wuf",
+        "outputId": "50799906-e4f8-4748-e293-fa4d3b782dd5"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "four\n",
+            "four\n",
+            "four\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output Variables"
+      ],
+      "metadata": {
+        "id": "Tax_yGIy52fz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = \"Python is \"\n",
+        "y = \"enjoying\"\n",
+        "z = x + y\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wbhmaati56bj",
+        "outputId": "b8ad85e0-d9a4-483f-ee6d-45ba3a19e36d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python is enjoying\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Arithmetic Operators"
+      ],
+      "metadata": {
+        "id": "y2V2FZ9o6DS8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "y = 3\n",
+        "print(x + y)\n",
+        "\n",
+        "x = 5\n",
+        "y = 3\n",
+        "sum = x + y\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iQrMJkqg6SdQ",
+        "outputId": "9b7f52b7-b34d-4c95-bcaa-52789f4e5853"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Assignment Operators"
+      ],
+      "metadata": {
+        "id": "Ga1M8Rq_6gKD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b, c = 0, -1, 6\n",
+        "c %= 3\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LsZ-ADe46huk",
+        "outputId": "d01de681-2cc1-42a1-cc80-9b06c6023c4d"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Comparison and Logical Operators"
+      ],
+      "metadata": {
+        "id": "7EMOGZDk6vrB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b, c = 0, -1, 6\n",
+        "a > b and c > b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sG8VOo2Z6xJw",
+        "outputId": "08e9f8ef-7f74-4c60-9b97-6d8d92ebb890"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Identity Operators"
+      ],
+      "metadata": {
+        "id": "Gbm02xDZ7Iou"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b, c = 0, -1, 5\n",
+        "a is c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "787BcY4S7KJ3",
+        "outputId": "02d8033b-3b55-41d4-e3c1-a12de9d5fd71"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
