--- a/Loop_Statements.ipynb
+++ b/Loop_Statements.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNw3PojzHThx5vquaoUZHKM",
+      "authorship_tag": "ABX9TyMokZyO0vxmD1Qf26hrtT2N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -159,6 +159,44 @@
             "Tuesday\n",
             "Wednesday\n",
             "Thursday\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "week = [\"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\"]\n",
+        "print(week[2])\n",
+        "print(week[3])\n",
+        "\n",
+        "for x in week:\n",
+        "  if x == \"Tuesday\": \n",
+        "    print(x)\n",
+        "    i += 1\n",
+        "  if x == \"Wednesday\":\n",
+        "    print(x)\n",
+        "    i += 1\n",
+        "  \n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BzcsiLVldYzh",
+        "outputId": "7b430f55-b3b6-4c8e-b86d-d572098f0b00"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tuesday\n",
+            "Wednesday\n",
+            "Tuesday\n",
+            "Wednesday\n"
           ]
         }
       ]
