--- a/Lab_Activity_1.ipynb
+++ b/Lab_Activity_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPENUU3scGIVbPFboUZVCXW",
+      "authorship_tag": "ABX9TyP0CGW8emtn+bHU1it3+9TE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -67,7 +67,9 @@
         "print(\"sum =\", sum)\n",
         "\n",
         "average = sum / total_numbers\n",
-        "print(\"Average = \", average)"
+        "print(\"Average = \", average)\n",
+        "\n",
+        "#https://adamsoneduph-my.sharepoint.com/:w:/g/personal/jarren_leigh_ramos_adamson_edu_ph/Ebt46FCgUylPp8pmzgWD7KAByTBJMTNiiLKfbJbqWYVMXg?e=DtwsIT"
       ]
     }
   ]
