--- a/Hands_on_1.ipynb
+++ b/Hands_on_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDL5sUuWjDvZLQFm7xy1gl",
+      "authorship_tag": "ABX9TyOHuYHhP6H5+VA7VQ3oVBzE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,13 +62,13 @@
         "class std3(Person):\n",
         "  pass\n",
         "\n",
-        "Student1 = std1(\"Student 1\", 94, 93, 90)\n",
+        "Student1 = std1(\"Jarren Ramos\", 94, 93, 90)\n",
         "Student1.Display()\n",
         "Student1.Grade()\n",
-        "Student2 = std2(\"Student 2\", 88, 80, 90)\n",
+        "Student2 = std2(\"Leigh Ramos\", 88, 80, 90)\n",
         "Student2.Display()\n",
         "Student2.Grade()\n",
-        "Student3 = std3(\"Student 3\", 94, 88, 89)\n",
+        "Student3 = std3(\"C. Ramos\", 94, 88, 89)\n",
         "Student3.Display()\n",
         "Student3.Grade()"
       ],
@@ -77,27 +77,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PkH64YLKiHb-",
-        "outputId": "6c729656-bc7b-4750-a583-08e3b968db94"
+        "outputId": "688389f0-36db-46ba-c012-b2bbc142901e"
       },
-      "execution_count": 57,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Student 1\n",
+            "Jarren Ramos\n",
             "   Prelims grade is:  94\n",
             "   Midterms grade is:  93\n",
             "   Finals grade is:  90\n",
             "   Average grade is:  92.33\n",
             "\n",
-            "Student 2\n",
+            "Leigh Ramos\n",
             "   Prelims grade is:  88\n",
             "   Midterms grade is:  80\n",
             "   Finals grade is:  90\n",
             "   Average grade is:  86.0\n",
             "\n",
-            "Student 3\n",
+            "C. Ramos\n",
             "   Prelims grade is:  94\n",
             "   Midterms grade is:  88\n",
             "   Finals grade is:  89\n",
